bpy.ops.screen.area_join() crash #69122

Closed
opened 2019-08-24 18:13:58 +02:00 by Kai Jægersen · 6 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86

Blender Version
Broken: version: 2.81 (sub 3), branch: master, commit date: 2019-08-23 02:03, hash: 232049dd94
Worked: (optional)

bpy.ops.screen.area_join()

This operator has been touched recently and crashes blender when programmatically invoked with arbitrary cursor values. Probably due to internally failing while the modal just keeps running.

The old operator had checks in place to cancel when the mouse cursor, or the coords passed were outside of the action zones.

  1. Run bpy.ops.screen_area_join('INVOKE_DEFAULT', cursor=(-500, 3000))

Or load the attached blend file. Run script or hit enter in console
area_join_crash.blend

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86 **Blender Version** Broken: version: 2.81 (sub 3), branch: master, commit date: 2019-08-23 02:03, hash: `232049dd94` Worked: (optional) bpy.ops.screen.area_join() This operator has been touched recently and crashes blender when programmatically invoked with arbitrary `cursor` values. Probably due to internally failing while the modal just keeps running. The old operator had checks in place to cancel when the mouse cursor, or the coords passed were outside of the action zones. 1. Run `bpy.ops.screen_area_join('INVOKE_DEFAULT', cursor=(-500, 3000))` Or load the attached blend file. Run script or hit enter in console [area_join_crash.blend](https://archive.blender.org/developer/F7701918/area_join_crash.blend)
Author

Added subscriber: @KaiJaegersen

Added subscriber: @KaiJaegersen
Member

Added subscriber: @Harley

Added subscriber: @Harley
Member

Thanks. Will take a look. Although I just did recent work in there, my gut feeling is that I would have broken this with prior work last year.

Thanks. Will take a look. Although I just did recent work in there, my gut feeling is that I would have broken this with prior work last year.
Harley Acheson self-assigned this 2019-08-26 21:04:34 +02:00
Member

Confirmed. My bad.

Will crash if passing arbitrary cursor positions via python that aren't actually on an edge.

Confirmed. My bad. Will crash if passing arbitrary cursor positions via python that aren't actually on an edge.

This issue was referenced by ce2368cf69

This issue was referenced by ce2368cf69f5124e0450efb759f2343735c37616
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69122
No description provided.